@@ -1,5 +1,15 @@
 2006-09-20  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/StructureWriter.cs
+	  Mono.Cecil/ModuleDefinition.cs
+	  Mono.Cecil/ReflectionWriter.cs
+	  Mono.Cecil/AssemblyFactory.cs
+	  Mono.Cecil.Cil/ISymbolReader.cs
+	  Mono.Cecil.Cil/CodeWriter.cs
+	  Mono.Cecil.Cil/ISymbolWriter.cs
+	  Mono.Cecil.Cil/SymbolStoreHelper.cs:
+		Working on the debug infos stuff.
+
 	* Mono.Cecil.Signatures/SignatureReader.cs:
 		Ensure custom attributes are read when they can be.
 		Patch by Sebastien Pouliot.
